using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string Running = "Running";
    public const string Climbing = "Climbing";
    public const string ClimbingSpeed = "ClimbingSpeed";
    public const string Ladder = "Ladder";
    public const string Ground = "Ground";
    public const string Died = "Died";
    public const string Enemy = "Enemy";
    public const string Hazards = "Hazards";
}
